Bug 329141 - Data is not saved in form combo boxes
Summary: Data is not saved in form combo boxes
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: Forms (other bugs)
Version First Reported In: 2.8 beta1
Platform: Compiled Sources All
: NOR major
Target Milestone: 2.8
Assignee: Jarosław Staniek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-23 00:24 UTC by Andrius
Modified: 2014-01-19 21:03 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.8.0 RC1
Sentry Crash Report:


Attachments
testcase (18.00 KB, application/octet-stream)
2013-12-23 00:25 UTC, Andrius
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrius 2013-12-23 00:24:45 UTC
When tabbing focus between fields in a form, focus gets stuck in the combo boxes. Data from combo box is also not saved when saving the record from the form.

Reproducible: Always

Steps to Reproduce:
1 - Open frmBar in the attached testcase.
2.1 - Try pressing "Tab" to switch fields
2.2 - Select a value from the combo box and save the record
Actual Results:  
2.1 - focus gets stuck in the combo box
2.2 - the saved record has no value in ID_FOO

Expected Results:  
2.1 - "Tab" changes focus from combo box to next text box
2.2 - the saved record has the selected value in ID_FOO

Self compiled sources from 2.8 branch, using MSVC
Comment 1 Andrius 2013-12-23 00:25:47 UTC
Created attachment 84236 [details]
testcase
Comment 2 Jarosław Staniek 2013-12-23 00:32:37 UTC
Confirmed on Linux too.
Comment 3 Jarosław Staniek 2014-01-06 21:10:10 UTC
Thanks, there are two unrelated bugs so one suggestion: next time it's better to make two reports...
Comment 4 Jarosław Staniek 2014-01-12 23:40:05 UTC
Good news, it's rather close to fix the update problem (in 2.8 RC1).
Comment 5 Jarosław Staniek 2014-01-12 23:46:48 UTC
Focus issue has been moved to https://bugs.kde.org/show_bug.cgi?id=329892
Comment 6 Jarosław Staniek 2014-01-13 00:06:03 UTC
@Andrius Published for testing. You can download and apply the patch for 2.8 from https://git.reviewboard.kde.org/r/114994/, compile (no cleaning needed) and try the result.

I encourage to register at http://git.reviewboard.kde.org even for non-developers :)
Comment 7 Jarosław Staniek 2014-01-13 21:25:07 UTC
Git commit 497942404325fb2282c6f0a2603a358447680c5f by Jaroslaw Staniek.
Committed on 12/01/2014 at 23:54.
Pushed by staniek into branch 'master'.

Fix bug: data is not saved in form combo boxes

Subwidget is not focusable but the form requires focusable
widget in order to manage data updates so let it be this KexiDBComboBox.

M  +2    -0    kexi/plugins/forms/widgets/kexidbcombobox.cpp

http://commits.kde.org/calligra/497942404325fb2282c6f0a2603a358447680c5f
Comment 8 Jarosław Staniek 2014-01-19 19:46:16 UTC
Git commit c64c07fb40b3da9faa3ef14c3e926d546e38eb68 by Jaroslaw Staniek.
Committed on 12/01/2014 at 23:54.
Pushed by staniek into branch 'calligra/2.8'.

Fix bug: data is not saved in form combo boxes

Subwidget is not focusable but the form requires focusable
widget in order to manage data updates so let it be this KexiDBComboBox.
REVIEW:114994

M  +2    -0    kexi/plugins/forms/widgets/kexidbcombobox.cpp

http://commits.kde.org/calligra/c64c07fb40b3da9faa3ef14c3e926d546e38eb68