Fix bug: data is not saved in form combo boxes

Subwidget is not focusable but the form requires focusable
widget in order to manage data updates so let it be this KexiDBComboBox.

BUG:329141