kexi/plugins/forms/widgets/kexidbcombobox.cpp
@@ -226,6 +226,8 @@ void KexiDBComboBox::createEditor()
             kDebug() << "altered margins:" << l << t << r << b;
 
             subwidget()->setFocusPolicy(Qt::NoFocus);
+            setFocusProxy(0); // Subwidget is not focusable but the form requires focusable
+                              // widget in order to manage data updates so let it be this KexiDBComboBox.
             subwidget()->setCursor(QCursor(Qt::ArrowCursor)); // widgets like listedit have IbeamCursor, we don't want that
             QPalette subwidgetPalette(subwidget()->palette());
             subwidgetPalette.setColor(QColorGroup::Base, Qt::transparent);
